[gd_scene load_steps=30 format=2]

[ext_resource path="res://src/ForceDebug.gd" type="Script" id=1]
[ext_resource path="res://models/bom.obj" type="ArrayMesh" id=2]
[ext_resource path="res://src/Rudder.gd" type="Script" id=3]
[ext_resource path="res://models/mainsail.obj" type="ArrayMesh" id=4]
[ext_resource path="res://src/BasicBoat.gd" type="Script" id=5]
[ext_resource path="res://src/Flag.gd" type="Script" id=7]
[ext_resource path="res://models/keel.obj" type="ArrayMesh" id=11]
[ext_resource path="res://models/boat.obj" type="ArrayMesh" id=12]
[ext_resource path="res://models/rudder.obj" type="ArrayMesh" id=13]
[ext_resource path="res://scenes/objects/Floater.tscn" type="PackedScene" id=14]
[ext_resource path="res://scenes/objects/Engine.tscn" type="PackedScene" id=15]
[ext_resource path="res://src/Sail.gd" type="Script" id=19]
[ext_resource path="res://scenes/ForceDebug.tscn" type="PackedScene" id=21]
[ext_resource path="res://addons/Trail/trail_3d.gd" type="Script" id=22]
[ext_resource path="res://scenes/WaserKeelF.tscn" type="PackedScene" id=24]
[ext_resource path="res://materials/wood_materia.tres" type="Material" id=37]

[sub_resource type="SphereShape" id=1]
radius = 0.248789

[sub_resource type="SpatialMaterial" id=2]
flags_ensure_correct_normals = true

[sub_resource type="BoxShape" id=3]
extents = Vector3( 0.0444001, 1.68375, 0.404018 )

[sub_resource type="SpatialMaterial" id=4]
flags_use_point_size = true
vertex_color_use_as_albedo = true

[sub_resource type="PhysicsMaterial" id=5]
friction = 0.5

[sub_resource type="ConvexPolygonShape" id=6]
points = PoolVector3Array( 0.00214, -1.48416, 0.152073, 0.022351, -1.42785, 0.152432, 0, -1.47587, 0.113023, 0, -0.956717, -0.732581, 0.00214, -0.925647, -0.757648, 0.022351, -0.899847, -0.707597, 0.022351, -0.899847, -0.707597, 0.022351, -1.42785, 0.152432, 0.05978, -0.830721, -0.418614, 0.05978, -1.13887, 0.083306, 0, -1.45284, 0.209302, 0, -0.256692, 0.943662, 0.00214, -1.4779, 0.178232, 0.022351, -1.42785, 0.152432, 0.036823, -0.220705, 0.879051, -0.05978, 0.186603, 0.205961, -0.036823, 0.294374, 0.040078, -0.05978, -0.121545, 0.707881, -0.036823, -0.220705, 0.879051, 0, -0.256692, 0.943662, 0, 0.335706, -0.021252, 0.00214, -1.48416, 0.152073, 0.00214, -1.4779, 0.178232, 0.022351, -1.42785, 0.152432, 0, -0.925647, -0.757648, -0.00214, -0.925647, -0.757648, 0, -0.956717, -0.732581, 0.05978, -1.13887, 0.083306, 0.05978, -0.121545, 0.707881, 0.05978, -0.830721, -0.418614, 0.05978, 0.186603, 0.205961, 0.036823, 0.294374, 0.040078, 0.022351, -0.899847, -0.707597, 0.05978, 0.186603, 0.205961, 0.05978, -0.830721, -0.418614, 0.022351, -1.42785, 0.152432, 0.036823, -0.220705, 0.879051, 0.05978, -1.13887, 0.083306, 0.05978, -0.121545, 0.707881, -0.022351, -1.42785, 0.152432, -0.00214, -1.4779, 0.178232, -0.00214, -1.48416, 0.152073, -0.022351, -0.899847, -0.707597, -0.00214, -0.925647, -0.757648, -0.00214, -0.899488, -0.763905, -0.022351, -0.899847, -0.707597, -0.022351, -1.42785, 0.152432, -0.00214, -0.925647, -0.757648, 0, -0.956717, -0.732581, 0, -1.47587, 0.113023, -0.00214, -1.48416, 0.152073, 0.00214, -0.899488, -0.763905, 0.022351, -0.899847, -0.707597, 0, -0.860438, -0.755612, 0, 0.335706, -0.021252, 0.036823, 0.294374, 0.040078, 0, -1.47587, 0.113023, -0.00214, -1.48416, 0.152073, 0, -1.48416, 0.152073, -0.05978, 0.186603, 0.205961, -0.05978, -0.121545, 0.707881, -0.05978, -0.830721, -0.418614, -0.05978, -1.13887, 0.083306, -0.036823, -0.220705, 0.879051, 0, -0.256692, 0.943662, -0.022351, -1.42785, 0.152432, -0.00214, -1.4779, 0.178232, 0, -1.45284, 0.209302, -0.05978, -1.13887, 0.083306, -0.022351, -1.42785, 0.152432, -0.05978, -0.830721, -0.418614, -0.022351, -0.899847, -0.707597, 0.00214, -1.4779, 0.178232, 0, -1.4779, 0.178232, 0, -1.45284, 0.209302, -0.00214, -1.4779, 0.178232, 0, -1.48416, 0.152073, 0, -1.4779, 0.178232, 0.00214, -1.48416, 0.152073, 0.00214, -1.4779, 0.178232, 0.00214, -0.899488, -0.763905, 0.00214, -0.925647, -0.757648, 0.022351, -0.899847, -0.707597, 0, -0.899488, -0.763905, 0, -0.860438, -0.755612, -0.00214, -0.899488, -0.763905, 0.00214, -0.899488, -0.763905, 0, -0.860438, -0.755612, 0, -0.899488, -0.763905, -0.036823, 0.294374, 0.040078, -0.022351, -0.899847, -0.707597, 0, 0.335706, -0.021252, 0, -0.860438, -0.755612, -0.00214, -0.899488, -0.763905, -0.00214, -0.899488, -0.763905, -0.00214, -0.925647, -0.757648, 0, -0.899488, -0.763905, 0, -0.925647, -0.757648, -0.00214, -1.4779, 0.178232, -0.00214, -1.48416, 0.152073, 0, -0.925647, -0.757648, 0.00214, -0.925647, -0.757648, 0, -0.899488, -0.763905, 0.00214, -0.899488, -0.763905, 0, -0.956717, -0.732581, 0.00214, -0.925647, -0.757648, 0, -0.925647, -0.757648, 0.00214, -1.48416, 0.152073, -0.05978, -0.830721, -0.418614, -0.022351, -0.899847, -0.707597, -0.05978, 0.186603, 0.205961, -0.036823, 0.294374, 0.040078, -0.05978, -0.121545, 0.707881, -0.036823, -0.220705, 0.879051, -0.05978, -1.13887, 0.083306, -0.022351, -1.42785, 0.152432, 0.05978, -0.121545, 0.707881, 0.036823, -0.220705, 0.879051, 0.05978, 0.186603, 0.205961, 0.036823, 0.294374, 0.040078, 0, 0.335706, -0.021252, 0, -0.256692, 0.943662 )

[sub_resource type="ConvexPolygonShape" id=7]
points = PoolVector3Array( 0.853998, -0.74524, 0.217645, 0.853998, 0.085529, 0.217645, 0.788992, -0.74524, 0.016604, 0.788992, 0.085529, 0.016604, 0.788992, -0.74524, 0.016604, 0.788992, 0.085529, 0.016604, 0.603868, -0.74524, -0.209652, 0.603868, 0.085529, -0.209652, 0.603868, -0.74524, -0.209652, 0.603868, 0.085529, -0.209652, 0.326811, -0.745239, -0.360831, 0.326811, 0.085529, -0.360831, 0.326811, -0.745239, -0.360831, 0.326811, 0.085529, -0.360831, 0, -0.745239, -0.413918, 0, 0.085529, -0.413918, -0.788992, 0.085529, 0.016604, -0.853998, 0.085529, 0.217645, -0.788992, -0.74524, 0.016604, -0.853998, -0.74524, 0.217645, -0.603868, 0.085529, -0.209652, -0.788992, 0.085529, 0.016604, -0.603868, -0.74524, -0.209652, -0.788992, -0.74524, 0.016604, 0, 0.085529, -0.413918, -0.326811, 0.085529, -0.360831, 0, -0.745239, -0.413918, -0.326811, -0.745239, -0.360831, -0.326811, 0.085529, -0.360831, -0.603868, 0.085529, -0.209652, -0.326811, -0.745239, -0.360831, -0.603868, -0.74524, -0.209652, -0.509385, 0.082548, 0.189165, -0.705238, 0.082086, 0.189165, -0.468828, 0.96443, 0.189165, -0.642419, 0.985166, 0.189165, -0.515526, 1.96388, 0.045051, -0.728836, 1.00097, 0.016604, -0.394566, 1.96388, -0.149939, -0.557827, 1.00097, -0.209652, 0.788992, -0.74524, 0.016604, 0.603868, -0.74524, -0.209652, 0.667082, -1.7963, 0.048163, 0.510563, -1.7963, -0.131634, 0, 3.18884, -0.191048, 0, 3.21827, -0.083372, -0.042531, 3.12343, -0.191048, -0.078587, 3.12343, -0.083372, 0, 0.08541, 0.396955, -0.277426, 0.083094, 0.359857, 0, 0.908429, 0.396955, -0.271106, 0.940812, 0.359857, 0.853998, -0.74524, 0.217645, 0.788992, -0.74524, 0.016604, 0.722045, -1.7963, 0.194403, 0.667082, -1.7963, 0.048163, 0.603868, -0.74524, -0.209652, 0.326811, -0.745239, -0.360831, 0.510563, -1.7963, -0.131634, 0.276315, -1.7963, -0.251771, 0.603868, 0.085529, -0.209652, 0.788992, 0.085529, 0.016604, 0.557827, 1.00097, -0.209652, 0.728836, 1.00097, 0.016604, 0, 3.12343, -0.228858, 0, 3.18884, -0.191048, -0.042531, 3.12343, -0.191048, 0.788992, 0.085529, 0.016604, 0.853998, 0.085529, 0.217645, 0.728836, 1.00097, 0.016604, 0.788887, 1.00097, 0.217645, 0.326811, 0.085529, -0.360831, 0.603868, 0.085529, -0.209652, 0.301894, 1.00097, -0.360831, 0.557827, 1.00097, -0.209652, 0, 0.085529, -0.413918, 0.326811, 0.085529, -0.360831, 0, 1.00097, -0.413918, 0.301894, 1.00097, -0.360831, -0.672915, 0.983818, 0.243248, -0.788887, 1.00097, 0.217645, -0.444454, 1.92994, 0.228057, -0.558001, 1.96388, 0.209212, 0.301894, 1.00097, -0.360831, 0.557827, 1.00097, -0.209652, 0.213538, 1.96388, -0.280227, 0.394566, 1.96388, -0.149939, 0.728836, 1.00097, 0.016604, 0.788887, 1.00097, 0.217645, 0.515526, 1.96388, 0.045051, 0.558001, 1.96388, 0.209212, -0.078587, 3.12343, -0.083372, -0.394566, 1.96388, -0.149939, -0.042531, 3.12343, -0.191048, -0.213538, 1.96388, -0.280227, -0.301894, 1.00097, -0.360831, -0.326811, 0.085529, -0.360831, 0, 1.00097, -0.413918, 0, 0.085529, -0.413918, 0, 1.00097, -0.413918, 0.301894, 1.00097, -0.360831, 0, 1.96388, -0.348678, 0.213538, 1.96388, -0.280227, 0.557827, 1.00097, -0.209652, 0.728836, 1.00097, 0.016604, 0.394566, 1.96388, -0.149939, 0.515526, 1.96388, 0.045051, 0.213538, 1.96388, -0.280227, 0.394566, 1.96388, -0.149939, 0.042531, 3.12343, -0.191048, 0.078587, 3.12343, -0.083372, 0.515526, 1.96388, 0.045051, 0.558001, 1.96388, 0.209212, 0.102679, 3.12343, 0.077776, 0.111139, 3.12343, 0.202017, -0.213538, 1.96388, -0.280227, -0.301894, 1.00097, -0.360831, 0, 1.96388, -0.348678, 0, 1.00097, -0.413918, -0.667082, -1.7963, 0.048163, -0.788992, -0.74524, 0.016604, -0.722045, -1.7963, 0.194403, -0.853998, -0.74524, 0.217645, 0, 1.96388, -0.348678, 0.213538, 1.96388, -0.280227, 0, 3.12343, -0.228858, 0.042531, 3.12343, -0.191048, 0.394566, 1.96388, -0.149939, 0.515526, 1.96388, 0.045051, 0.078587, 3.12343, -0.083372, 0.102679, 3.12343, 0.077776, -0.102679, 3.12343, 0.077776, -0.515526, 1.96388, 0.045051, -0.078587, 3.12343, -0.083372, -0.394566, 1.96388, -0.149939, -0.722045, -1.7963, 0.194403, 0, -1.7963, 0.194403, -0.667082, -1.7963, 0.048163, -0.510563, -1.7963, -0.131634, -0.276315, -1.7963, -0.251771, 0, -1.7963, -0.293958, -0.728836, 1.00097, 0.016604, -0.788992, 0.085529, 0.016604, -0.557827, 1.00097, -0.209652, -0.603868, 0.085529, -0.209652, 0.102679, 3.12343, 0.077776, 0.111139, 3.12343, 0.202017, 0, 3.24443, 0.077776, 0, 3.24443, 0.202017, -0.788887, 1.00097, 0.217645, -0.853998, 0.085529, 0.217645, -0.728836, 1.00097, 0.016604, -0.788992, 0.085529, 0.016604, -0.319895, -0.738252, 0.359857, -0.277426, 0.083094, 0.359857, 0, 0.08541, 0.396955, 0.102679, 3.12343, 0.077776, 0, 3.24443, 0.077776, 0.078587, 3.12343, -0.083372, 0, 3.21827, -0.083372, 0.509385, 0.082548, 0.189165, 0.705238, 0.082086, 0.189165, 0.500942, -0.738252, 0.189165, 0.70605, -0.738252, 0.189165, 0.078587, 3.12343, -0.083372, 0, 3.21827, -0.083372, 0.042531, 3.12343, -0.191048, 0, 3.18884, -0.191048, 0.042531, 3.12343, -0.191048, 0, 3.18884, -0.191048, 0, 3.12343, -0.228858, 0, 0.908429, 0.396955, -0.271106, 0.940812, 0.359857, 0, 1.92126, 0.303672, -0.189363, 1.92129, 0.266573, 0.276315, -1.7963, -0.251771, 0.510563, -1.7963, -0.131634, 0.667082, -1.7963, 0.048163, 0.722045, -1.7963, 0.194403, 0.705238, 0.082086, 0.189165, 0.737349, 0.081562, 0.245518, 0.70605, -0.738252, 0.189165, 0.737694, -0.738307, 0.246364, -0.111139, 3.12343, 0.202017, -0.558001, 1.96388, 0.209212, -0.102679, 3.12343, 0.077776, -0.515526, 1.96388, 0.045051, -0.394566, 1.96388, -0.149939, -0.557827, 1.00097, -0.209652, -0.213538, 1.96388, -0.280227, -0.301894, 1.00097, -0.360831, -0.70605, -0.738252, 0.189165, -0.500942, -0.738252, 0.189165, -0.509385, 0.082548, 0.189165, -0.42053, 1.93205, 0.189165, -0.444454, 1.92994, 0.228057, 0, 3.0592, 0.189165, 0, 3.06214, 0.21003, 0.604586, -1.71212, 0.135182, 0.70605, -0.738252, 0.189165, 0.637026, -1.71434, 0.215695, 0.737694, -0.738307, 0.246364, 0.642419, 0.985166, 0.189165, 0.468828, 0.96443, 0.189165, 0.509385, 0.082548, 0.189165, 0.672915, 0.983818, 0.243248, 0.737349, 0.081562, 0.245518, 0.642419, 0.985166, 0.189165, 0.705238, 0.082086, 0.189165, -0.737694, -0.738307, 0.246364, -0.853998, -0.74524, 0.217645, -0.737349, 0.081562, 0.245518, -0.853998, 0.085529, 0.217645, -0.510563, -1.7963, -0.131634, -0.603868, -0.74524, -0.209652, -0.667082, -1.7963, 0.048163, -0.788992, -0.74524, 0.016604, 0, -1.71434, 0.215695, -0.637026, -1.71434, 0.215695, 0, -1.71212, 0.135182, -0.604586, -1.71212, 0.135182, 0.444454, 1.92994, 0.228057, 0.672915, 0.983818, 0.243248, 0.42053, 1.93205, 0.189165, 0.642419, 0.985166, 0.189165, -0.557827, 1.00097, -0.209652, -0.603868, 0.085529, -0.209652, -0.301894, 1.00097, -0.360831, -0.326811, 0.085529, -0.360831, 0, 3.24443, 0.202017, -0.111139, 3.12343, 0.202017, 0, 3.24443, 0.077776, -0.102679, 3.12343, 0.077776, 0.42053, 1.93205, 0.189165, 0.642419, 0.985166, 0.189165, 0.189363, 1.92129, 0.266573, 0.468828, 0.96443, 0.189165, 0, 3.06214, 0.21003, 0.444454, 1.92994, 0.228057, 0, 3.0592, 0.189165, 0.42053, 1.93205, 0.189165, 0.604586, -1.71212, 0.135182, -0.604586, -1.71212, 0.135182, 0.319895, -0.738252, 0.359857, -0.319895, -0.738252, 0.359857, 0, 3.21827, -0.083372, 0, 3.24443, 0.077776, -0.078587, 3.12343, -0.083372, -0.102679, 3.12343, 0.077776, -0.705238, 0.082086, 0.189165, -0.737349, 0.081562, 0.245518, -0.642419, 0.985166, 0.189165, -0.672915, 0.983818, 0.243248, 0, 3.0592, 0.189165, 0.42053, 1.93205, 0.189165, 0.189363, 1.92129, 0.266573, -0.444454, 1.92994, 0.228057, -0.558001, 1.96388, 0.209212, 0, 3.06214, 0.21003, -0.111139, 3.12343, 0.202017, -0.642419, 0.985166, 0.189165, -0.672915, 0.983818, 0.243248, -0.42053, 1.93205, 0.189165, -0.444454, 1.92994, 0.228057, -0.737694, -0.738307, 0.246364, -0.737349, 0.081562, 0.245518, -0.70605, -0.738252, 0.189165, -0.705238, 0.082086, 0.189165, -0.737694, -0.738307, 0.246364, -0.70605, -0.738252, 0.189165, -0.637026, -1.71434, 0.215695, -0.604586, -1.71212, 0.135182, -0.319895, -0.738252, 0.359857, 0, 0.08541, 0.396955, 0.319895, -0.738252, 0.359857, 0.853998, 0.085529, 0.217645, 0.853998, -0.74524, 0.217645, 0.737349, 0.081562, 0.245518, 0.737694, -0.738307, 0.246364, 0.722045, -1.7963, 0.194403, 0, -1.7963, 0.194403, 0.637026, -1.71434, 0.215695, 0, -1.71434, 0.215695, 0.853998, -0.74524, 0.217645, 0.722045, -1.7963, 0.194403, 0.737694, -0.738307, 0.246364, 0.637026, -1.71434, 0.215695, -0.737349, 0.081562, 0.245518, -0.853998, 0.085529, 0.217645, -0.672915, 0.983818, 0.243248, -0.788887, 1.00097, 0.217645, 0.788887, 1.00097, 0.217645, 0.853998, 0.085529, 0.217645, 0.672915, 0.983818, 0.243248, 0.737349, 0.081562, 0.245518, 0.558001, 1.96388, 0.209212, 0.788887, 1.00097, 0.217645, 0.444454, 1.92994, 0.228057, 0.672915, 0.983818, 0.243248, 0.111139, 3.12343, 0.202017, 0, 3.06214, 0.21003, 0, 3.24443, 0.202017, 0.111139, 3.12343, 0.202017, 0.558001, 1.96388, 0.209212, 0, 3.06214, 0.21003, 0.444454, 1.92994, 0.228057, -0.500942, -0.738252, 0.189165, -0.604586, -1.71212, 0.135182, -0.70605, -0.738252, 0.189165, -0.277426, 0.083094, 0.359857, -0.509385, 0.082548, 0.189165, -0.271106, 0.940812, 0.359857, -0.468828, 0.96443, 0.189165, 0, 1.92126, 0.303672, -0.189363, 1.92129, 0.266573, 0, 3.0592, 0.189165, -0.558001, 1.96388, 0.209212, -0.788887, 1.00097, 0.217645, -0.515526, 1.96388, 0.045051, -0.728836, 1.00097, 0.016604, -0.189363, 1.92129, 0.266573, -0.42053, 1.93205, 0.189165, 0, 3.0592, 0.189165, -0.042531, 3.12343, -0.191048, -0.213538, 1.96388, -0.280227, 0, 3.12343, -0.228858, 0, 1.96388, -0.348678, -0.271106, 0.940812, 0.359857, -0.468828, 0.96443, 0.189165, -0.189363, 1.92129, 0.266573, 0.276315, -1.7963, -0.251771, 0.326811, -0.745239, -0.360831, 0, -1.7963, -0.293958, 0, -0.745239, -0.413918, 0.604586, -1.71212, 0.135182, 0.637026, -1.71434, 0.215695, 0, 0.08541, 0.396955, 0.277426, 0.083094, 0.359857, 0.319895, -0.738252, 0.359857, -0.637026, -1.71434, 0.215695, -0.722045, -1.7963, 0.194403, -0.737694, -0.738307, 0.246364, -0.853998, -0.74524, 0.217645, -0.276315, -1.7963, -0.251771, -0.326811, -0.745239, -0.360831, -0.510563, -1.7963, -0.131634, -0.603868, -0.74524, -0.209652, 0.189363, 1.92129, 0.266573, 0.271106, 0.940812, 0.359857, 0, 1.92126, 0.303672, 0, 0.908429, 0.396955, 0.271106, 0.940812, 0.359857, 0.277426, 0.083094, 0.359857, 0, 0.908429, 0.396955, 0, 0.08541, 0.396955, 0, 3.0592, 0.189165, 0.189363, 1.92129, 0.266573, 0, 1.92126, 0.303672, -0.637026, -1.71434, 0.215695, -0.722045, -1.7963, 0.194403, -0.604586, -1.71212, 0.135182, -0.500942, -0.738252, 0.189165, -0.319895, -0.738252, 0.359857, 0.319895, -0.738252, 0.359857, 0.500942, -0.738252, 0.189165, 0.604586, -1.71212, 0.135182, 0.509385, 0.082548, 0.189165, 0.500942, -0.738252, 0.189165, 0.277426, 0.083094, 0.359857, 0.319895, -0.738252, 0.359857, 0.189363, 1.92129, 0.266573, 0.468828, 0.96443, 0.189165, 0.271106, 0.940812, 0.359857, 0.468828, 0.96443, 0.189165, 0.509385, 0.082548, 0.189165, 0.271106, 0.940812, 0.359857, 0.277426, 0.083094, 0.359857, 0, 3.24443, 0.202017, 0, 3.06214, 0.21003, -0.111139, 3.12343, 0.202017, 0, -0.745239, -0.413918, -0.326811, -0.745239, -0.360831, 0, -1.7963, -0.293958, -0.276315, -1.7963, -0.251771, 0.70605, -0.738252, 0.189165, 0.604586, -1.71212, 0.135182, 0.500942, -0.738252, 0.189165, -0.319895, -0.738252, 0.359857, -0.500942, -0.738252, 0.189165, -0.277426, 0.083094, 0.359857, -0.509385, 0.082548, 0.189165, -0.468828, 0.96443, 0.189165, -0.642419, 0.985166, 0.189165, -0.189363, 1.92129, 0.266573, -0.42053, 1.93205, 0.189165 )

[sub_resource type="SpatialMaterial" id=8]
flags_use_point_size = true
vertex_color_use_as_albedo = true

[sub_resource type="BoxShape" id=9]
extents = Vector3( 0.0238163, 0.42417, 0.0740858 )

[sub_resource type="SpatialMaterial" id=10]
flags_use_point_size = true
vertex_color_use_as_albedo = true

[sub_resource type="SpatialMaterial" id=11]
flags_unshaded = true
vertex_color_use_as_albedo = true
params_cull_mode = 2

[sub_resource type="Curve" id=12]
max_value = 2.0
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 0.496324, 0.981818 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.105222, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=13]
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[node name="BasicBoat" type="Spatial"]

[node name="FokHinge" type="HingeJoint" parent="."]
transform = Transform( -1, 3.25841e-07, 5.30863e-14, 0, -1.62921e-07, 1, 3.25841e-07, 1, 1.62921e-07, 0, 1.34015, -2.68639 )
nodes/node_a = NodePath("../Boat")
nodes/node_b = NodePath("../fok_sheet")
collision/exclude_nodes = false
params/bias = 0.55
angular_limit/enable = true
angular_limit/upper = 10.0
angular_limit/lower = -10.0

[node name="fok_sheet" type="RigidBody" parent="."]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 1.23678, -0.732964 )
collision_layer = 0
collision_mask = 0
gravity_scale = 0.0
script = ExtResource( 19 )
lift_force = 300.0
direct_force = 150.0

[node name="CollisionShape" type="CollisionShape" parent="fok_sheet"]
shape = SubResource( 1 )

[node name="ForceDebug" parent="fok_sheet" instance=ExtResource( 21 )]
transform = Transform( -1.002, 0, 8.7598e-08, 0, 1, 0, -8.74227e-08, 0, -1, 0, 0.468008, 0.838769 )

[node name="ForceOffset" type="Position3D" parent="fok_sheet"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.468008, 0.838769 )

[node name="LowerSailHinge" type="HingeJoint" parent="."]
transform = Transform( -1, 3.25841e-07, 5.30863e-14, 0, -1.62921e-07, 1, 3.25841e-07, 1, 1.62921e-07, 0, 1.34015, -0.541637 )
nodes/node_a = NodePath("../Boat")
nodes/node_b = NodePath("../Bom")
collision/exclude_nodes = false
params/bias = 0.55
angular_limit/enable = true
angular_limit/upper = 10.0
angular_limit/lower = -10.0

[node name="Bom" type="RigidBody" parent="."]
transform = Transform( -0.998, 0, -8.74228e-08, 0, 1, 0, 8.72479e-08, 0, -1, 0, 1.18116, -0.441334 )
mass = 2.0
gravity_scale = 0.0
script = ExtResource( 19 )
lift_force = 300.0
direct_force = 150.0

[node name="Bom" type="MeshInstance" parent="Bom"]
transform = Transform( 1, 0, 0, 0, 1, 0, 7.10543e-15, 0, 1, 0, 0, 0 )
mesh = ExtResource( 2 )
material/0 = null

[node name="mainsail" type="MeshInstance" parent="Bom"]
transform = Transform( 1, 0, -7.10543e-15, 0, 1, 0, 2.84217e-14, 0, 1, 0, 0, 0 )
mesh = ExtResource( 4 )
material/0 = SubResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="Bom"]
transform = Transform( 0.99873, 0.0499647, -0.00728513, -0.049765, 0.957123, -0.285359, -0.00725606, 0.285359, 0.958393, 0.0695051, 1.66245, -1.31604 )
shape = SubResource( 3 )

[node name="ForceDebug" type="ImmediateGeometry" parent="Bom"]
transform = Transform( -1, 0, 1.50996e-07, 0, 1, 0, -1.50996e-07, 0, -1, -0.0161155, 1.20623, -0.917594 )
visible = false
material_override = SubResource( 4 )
script = ExtResource( 1 )

[node name="ForceOffset" type="Position3D" parent="Bom"]
transform = Transform( 1, 0, 0, 0, 1, 0, 2.84217e-14, 0, 1, -0.0161155, 1.20623, -0.917594 )

[node name="Boat" type="RigidBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.103551, 0.238437 )
collision_layer = 17
collision_mask = 17
mass = 10.0
physics_material_override = SubResource( 5 )
gravity_scale = 0.0
contacts_reported = 1
contact_monitor = true
can_sleep = false
angular_damp = 0.9
script = ExtResource( 5 )

[node name="Engine" parent="Boat" instance=ExtResource( 15 )]
transform = Transform( -1, 0, -1.50996e-07, 0, 1, 0, 1.50996e-07, 0, -1, -0.35969, 0.805946, 1.87189 )

[node name="FloaterMast" parent="Boat" instance=ExtResource( 14 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 6.21302, -0.776187 )
depthBeforeSubmerged = 0.8
impulseMultipier = 1.0

[node name="FloaterBow" parent="Boat" instance=ExtResource( 14 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.183585, -2 )
impulseMultipier = 40.0

[node name="FloaterStern" parent="Boat" instance=ExtResource( 14 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.183585, 2 )
impulseMultipier = 40.0

[node name="FloaterPort" parent="Boat" instance=ExtResource( 14 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.8, 0.183585, 0 )
impulseMultipier = 20.0

[node name="FloaterStar" parent="Boat" instance=ExtResource( 14 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.8, 0.183585, 0 )
impulseMultipier = 20.0

[node name="KeelForceOffset" type="Position3D" parent="Boat"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.915, -1.09519 )

[node name="boat" type="MeshInstance" parent="Boat"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0.463968, 0 )
layers = 2
mesh = ExtResource( 12 )
material/0 = null

[node name="keel" type="MeshInstance" parent="Boat"]
transform = Transform( 0.76706, 0, 0, 0, 0.256025, 0.723072, 0, -0.723072, 0.256025, 0, -0.013, -0.509 )
layers = 2
mesh = ExtResource( 11 )
material/0 = null

[node name="CollisionShape2" type="CollisionShape" parent="Boat"]
transform = Transform( 0.76706, 0, 0, 0, 0.256025, 0.723072, 0, -0.723072, 0.256025, 0, -0.013, -0.509 )
shape = SubResource( 6 )

[node name="CollisionShape" type="CollisionShape" parent="Boat"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0.463968, 0 )
shape = SubResource( 7 )

[node name="Mast" type="CSGBox" parent="Boat"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.5312, -0.779 )
width = 0.0921735
height = 6.02287
depth = 0.102501

[node name="Flag" type="Position3D" parent="Boat/Mast"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.75104, 0 )
script = ExtResource( 7 )

[node name="CSGBox" type="CSGBox" parent="Boat/Mast/Flag"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.168691, 0.524074 )
visible = false
width = 0.0239318
height = 0.385346
depth = 1.0733

[node name="ForceDebug" type="ImmediateGeometry" parent="Boat"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.18867, 0 )
visible = false
material_override = SubResource( 8 )
script = ExtResource( 1 )

[node name="Rudder" type="Spatial" parent="Boat"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.676556, 1.82306 )
script = ExtResource( 3 )

[node name="ForceOffset" type="Position3D" parent="Boat/Rudder"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.620049, 0.182308 )
visible = false

[node name="Rudder" type="MeshInstance" parent="Boat/Rudder"]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0 )
mesh = ExtResource( 13 )
material/0 = ExtResource( 37 )

[node name="CollisionShape" type="CollisionShape" parent="Boat/Rudder"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.472123, 0.227822 )
shape = SubResource( 9 )

[node name="ForceDebug" type="ImmediateGeometry" parent="Boat/Rudder"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.36396, 0.185031 )
visible = false
material_override = SubResource( 10 )
script = ExtResource( 1 )

[node name="WaserKeelR" type="Position3D" parent="Boat"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.655986, 0.507013, 1.82702 )

[node name="Trail3D" type="ImmediateGeometry" parent="Boat/WaserKeelR"]
material_override = SubResource( 11 )
script = ExtResource( 22 )
distance = 0.5
lifetime = 10.0
base_width = 0.2
width_profile = SubResource( 12 )
color_gradient = SubResource( 13 )
axe = "X"
show_wireframe = true

[node name="WaserKeelL" type="Position3D" parent="Boat"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.625644, 0.507013, 1.82702 )

[node name="Trail3D" type="ImmediateGeometry" parent="Boat/WaserKeelL"]
material_override = SubResource( 11 )
script = ExtResource( 22 )
distance = 0.5
lifetime = 10.0
base_width = 0.2
width_profile = SubResource( 12 )
color_gradient = SubResource( 13 )
axe = "X"
show_wireframe = true

[node name="WaserKeelF" parent="Boat" instance=ExtResource( 24 )]

[node name="Tween" type="Tween" parent="Boat"]
